--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -2,270 +2,199 @@
 $profile-form-field-mt: 30px;
 
 :host {
-  .career-main {
-    background-color: $bg-color-1;
-    height: 100%;
-    width: 100%;
-    display: table;
+  display: grid;
+  grid-template:
+    " search search " 70px
+    " filter results " auto
+    / 315px  1fr
+  ;
+  padding: 0;
+}
 
-    .comman_search_filter {
-      .people-search-header {
-        background-color: $white;
-        border: 1px solid #ddd;
-        padding: 12px 10px;
-        text-align: center;
-        margin-bottom: 20px;
-        position: relative;
-        z-index: 1;
-        left: 0;
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
 
-        & mat-form-field {
-          width: 560px;
-          border-radius: 50px;
-          background-color: $bg-color-1;
-          font-style: italic;
-          font-size: 14px;
-          line-height: 21px;
-          font-family: "Poppins", sans-serif;
-          font-weight: 500;
-        }
+.common_search_filter {
+  grid-area: search;
+  .people-search-header {
+    background-color: $white;
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: center;
+    z-index: 1;
 
-        & .mat-icon {
-          top: -13px;
-          right: 0;
-          cursor: pointer;
-          font-size: 26px;
-          position: absolute;
-          color: rgba(map-get($md-cfaccent, 500), .34);
-        }
-      }
-
-      .filter-data {
-        & .filter_icon {
-          display: none;
-        }
-      }
-    }
-
-    .people-main-container {
+    & mat-form-field {
+      width: 560px;
+      border-radius: 50px;
       background-color: $bg-color-1;
-      display: table;
-      width: 94%;
-      margin: 0 auto;
-
-      .people-list-container {
-        float: right;
-        width: 70.3%;
-        padding-bottom: 80px;
-
-        .row {
-          background: $white;
-          padding: 10px 18px;
-          border-bottom: 1px solid map-get($md-cfaccent, 50);
-          margin-bottom: 5px;
-          border-radius: 5px;
-
-          &.no-people {
-            @include btn-align-center;
-          }
-
-          .header-container {
-            width: 100%;
-            margin-bottom: 20px;
-            @include flex(row, flex-start, space-between);
-
-            action-button {
-              margin-top: 10px;
-            }
-          }
-
-          .sub-container {
-            width: 100%;
-            margin-bottom: 20px;
-            display: inline-flex;
-            flex-wrap: wrap;
-            .user-info {
-              margin-bottom: 10px;
-              margin-right: 20px;
-            }
-          }
-
-          .skills-container {
-            width: 100%;
-            margin-bottom: 20px;
-
-            h5 {
-              margin-top: 0;
-              margin-bottom: 0;
-              font-family: 'Poppins-Regular', sans-serif;
-              font-weight: 400;
-              font-style: normal;
-              font-size: 14px;
-              line-height: 21px;
-              color: rgba(map-get($md-cfaccent, 500), .34);
-
-              span.count {
-                color: rgba(map-get($md-cfaccent, 500), .84);
-              }
-            }
-
-            .skills {
-              @include flex(row, center, flex-start);
-
-              img {
-                width: 30px;
-                height: 30px;
-                margin: 10px 0 5px 10px;
-                cursor: pointer;
-              }
-
-              simple-tag {
-                margin: 10px 10px 5px 0;
-              }
-            }
-          }
-        }
-      }
-
-      .pagination {
-        float: right;
-
-        ul {
-          padding: 3px 10px;
-          border-radius: 50px;
-          background-color: map-get($md-cfgray, 500);
-          @include inline-block-btn;
-
-          li {
-            @include inline-block-btn;
-            height: 15px;
-            width: 15px;
-            font-size: 14px;
-            text-align: center;
-            border-radius: 100%;
-            padding: 8px;
-            overflow: hidden;
-            vertical-align: middle;
-            color: $header-color;
-            cursor: pointer;
-            font-family: "Poppins", sans-serif;
-            font-weight: 500;
-            line-height: 21px;
-
-            &.active {
-              background-color: $white;
-            }
-
-            &.large_pagination_button {
-              height: auto;
-              width: auto;
-              margin-top: 4px;
-            }
-
-            & span {
-              vertical-align: middle;
-              @include inline-block-btn;
-            }
-
-          }
-        }
-      }
+      font-style: italic;
+      font-size: 14px;
+      line-height: 21px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 500;
     }
 
-    .filter-container {
-      width: 26%;
-      float: left;
-      position: sticky;
-      position: -webkit-sticky;
-      top: 80px;
-      overflow-y: scroll;
-      height: calc(100vh - 70px);
-      padding-bottom: 120px;
-      box-sizing: border-box;
+    & .mat-icon {
+      top: -13px;
+      right: 0;
+      cursor: pointer;
+      font-size: 26px;
+      position: absolute;
+      color: rgba(map-get($md-cfaccent, 500), .34);
+    }
+  }
+  .filter-data {
+    display: none;
+    cursor: pointer;
+    margin: 18px 0 -47px 10px;
+    width: 35px;
+  }
+}
 
-      &::-webkit-scrollbar {
-        width: 0;
-        background-color: transparent;
-      }
+.filter-container {
+  grid-area: filter;
+  position: sticky;
+  padding: 20px;
+  top: 80px;
+  overflow-y: scroll;
+  height: calc(100vh - 80px);
+  height: 600px;
+  padding-bottom: 120px;
 
-      &::after {
-        content: "";
-        display: table;
-        clear: both;
-      }
+  .nav-title {
+    height: 44px;
+    @include flex(row, center, flex-start);
 
-      &::before {
-        content: "";
-        display: table;
-      }
-
-      .nav-title {
-        height: 44px;
-        @include flex(row, center, flex-start);
-
-        h3 {
-          font-size: 20px;
-          margin: 0;
-          line-height: 30px;
-          color: rgba(0, 29, 64, 0.24);
-          text-transform: uppercase;
-          padding-bottom: 27px;
-          font-family: "Poppins", sans-serif;
-          font-weight: 700;
-        }
-      }
-
-      .filter-card {
-        position: relative;
-        padding: 10px 15px;
-        height: fit-content;
-        background: white;
-        border-radius: 5px;
-        margin-bottom: 2px;
-
-        & mat-select {
-          font-size: 14px;
-          font-family: "Poppins", sans-serif;
-          line-height: 21px;
-          color: rgba(map-get($md-cfaccent, 500), .34);
-          font-weight: 400;
-
-          & .mat-form-field-wrapper {
-            & .mat-form-field-flex {
-              & .mat-form-field-infix {
-                border-top: none;
-              }
-            }
-          }
-        }
-
-        & simple-tag {
-          @include inline-block-btn;
-          margin: 15px 5px 0px 5px;
-        }
-
-        & mat-form-field {
-          font-size: 14px;
-          display: block;
-        }
-      }
-
-      .side-filter-btn {
-        @include btn-align-center;
-
-        & action-button {
-          @include inline-block-btn;
-          margin-top: 10px;
-        }
-      }
+    h3 {
+      margin: 0;
+      line-height: 30px;
+      color: rgba(0, 29, 64, 0.24);
+      text-transform: uppercase;
     }
   }
 
-  .loading {
-    position: absolute;
-    width: 100%;
-    height: calc(100% - 70px);
-    @include flex(column, center, center);
+  .filter-card {
+    position: relative;
+    padding: 10px 15px 20px;
+    height: fit-content;
+    background: white;
+    border-radius: 5px;
+    margin-bottom: 2px;
+
+    & mat-select {
+      font-size: 14px;
+      font-family: "Poppins", sans-serif;
+      line-height: 21px;
+      color: rgba(map-get($md-cfaccent, 500), .34);
+      font-weight: 400;
+
+      & .mat-form-field-wrapper {
+        & .mat-form-field-flex {
+          & .mat-form-field-infix {
+            border-top: none;
+          }
+        }
+      }
+    }
+
+    & simple-tag {
+      @include inline-block-btn;
+      margin: 15px 5px 0px 5px;
+    }
+
+    & mat-form-field {
+      font-size: 14px;
+      display: block;
+    }
+  }
+
+  .side-filter-btn {
+    @include btn-align-center;
+
+    & action-button {
+      @include inline-block-btn;
+      margin-top: 10px;
+    }
+  }
+}
+
+.people-list-container {
+  grid-area: results;
+  padding: 65px 20px;
+
+  .row {
+    background: $white;
+    padding: 10px 18px;
+    border-bottom: 1px solid map-get($md-cfaccent, 50);
+    margin-bottom: 5px;
+    border-radius: 5px;
+
+    a {
+      text-decoration: none;
+    }
+
+    &.no-people {
+      @include btn-align-center;
+    }
+
+    .header-container {
+      width: 100%;
+      margin-bottom: 20px;
+      @include flex(row, flex-start, space-between);
+
+      action-button {
+        margin-top: 10px;
+      }
+    }
+
+    .sub-container {
+      width: 100%;
+      margin-bottom: 20px;
+      display: inline-flex;
+      flex-wrap: wrap;
+      .user-info {
+        margin-bottom: 10px;
+        margin-right: 20px;
+      }
+    }
+
+    .skills-container {
+      width: 100%;
+      margin-bottom: 20px;
+
+      h5 {
+        margin-top: 0;
+        margin-bottom: 0;
+        font-family: 'Poppins-Regular', sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 14px;
+        line-height: 21px;
+        color: rgba(map-get($md-cfaccent, 500), .34);
+
+        span.count {
+          color: rgba(map-get($md-cfaccent, 500), .84);
+        }
+      }
+
+      .skills {
+        @include flex(row, center, flex-start);
+
+        img {
+          width: 30px;
+          height: 30px;
+          margin: 10px 0 5px 10px;
+          cursor: pointer;
+        }
+
+        simple-tag {
+          margin: 10px 10px 5px 0;
+        }
+      }
+    }
   }
 
   .user-info {
@@ -342,361 +271,37 @@ $profile-form-field-mt: 30px;
   }
 }
 
-
-@media only screen and (min-width:$min-mini-desktop-breakpoint) and (max-width:$max-mini-desktop-breakpoint) {
+@media only screen and (max-width: $max-tablet-breakpoint) {
   :host {
-    .career-main {
-      .comman_search_filter {
-        display: block;
-        width: 100%;
-        text-align: left;
-        margin: 0 auto 12px;
-        background-color: $white;
+    display: grid;
+    grid-gap: 20px;
+    grid-template:
+      " search " 70px
+      " results " auto
+    ;
+    padding: 0;
+  }
 
-        .people-search-header {
-          display: block;
-          border: none;
-          width: 560px;
-          margin: 0 auto;
-          position: relative;
-
-          mat-form-field {
-            width: 100%;
-
-            mat-icon {
-              cursor: pointer;
-            }
-          }
-        }
-
-        .filter-data {
-          float: left;
-          background-color: $white;
-          margin-top: 20px;
-          margin-left: 28px;
-
-          & .filter_icon {
-            display: block;
-            cursor: pointer;
-          }
-        }
+  .common_search_filter {
+    .people-search-header {
+      & mat-form-field {
+        width: 90%;
+        margin-right: -30px;
       }
-
-      .people-main-container {
-        width: 100%;
-
-        & .container__header {
-          &.tablet {
-            position: absolute;
-            width: 100%;
-            top: -1000%;
-            left: 0;
-            border-bottom: none;
-            @include flex(column, center, center);
-            background-color: $white;
-            padding-top: $profile-form-field-mt;
-            padding-bottom: $profile-form-field-mt;
-            box-sizing: border-box;
-            transition: top 0.5s;
-            transition-timing-function: ease;
-            z-index: 1;
-
-            &.open {
-              top: 140px;
-              transition: top 0.5s;
-              transition-timing-function: ease;
-              background-color: #f2f2f2;
-              padding-top: 0
-            }
-          }
-
-          &.filter-container {
-            height: auto;
-            width: 100%;
-            float: none;
-            margin: 0 auto;
-            padding: 0 10px;
-            clear: both;
-          }
-
-          & .nav-title {
-            width: 100%;
-          }
-
-          & .filter-card {
-            width: 97%;
-          }
-        }
-
-        .people-list-container {
-          float: none;
-          width: 95%;
-          margin: 0 auto;
-          padding-top: 10px;
-        }
-      }
+    }
+    .filter-data {
+      display: block;
     }
   }
-}
 
-
-
-@media only screen and (min-width:$min-tablet-breakpoint) and (max-width:$max-tablet-breakpoint) {
-  :host {
-    .career-main {
-      .comman_search_filter {
-        display: block;
-        width: 100%;
-        text-align: left;
-        margin: 0 auto 12px;
-        background-color: $white;
-
-        .people-search-header {
-          display: block;
-          border: none;
-          width: 450px;
-          margin: 0 auto;
-          position: relative;
-
-          mat-form-field {
-            width: 100%;
-
-            mat-icon {
-              cursor: pointer;
-            }
-          }
-        }
-
-        .filter-data {
-          float: left;
-          background-color: $white;
-          margin-top: 20px;
-          margin-left: 28px;
-
-          & .filter_icon {
-            display: block;
-            cursor: pointer;
-          }
-        }
-      }
-
-      .people-main-container {
-        width: 100%;
-
-        & .container__header {
-          &.tablet {
-            position: absolute;
-            width: 100%;
-            top: -1000%;
-            left: 0;
-            border-bottom: none;
-            @include flex(column, center, center);
-            background-color: $white;
-            padding-top: $profile-form-field-mt;
-            padding-bottom: $profile-form-field-mt;
-            box-sizing: border-box;
-            transition: top 0.5s;
-            transition-timing-function: ease;
-            z-index: 1;
-
-            &.open {
-              top: 140px;
-              transition: top 0.5s;
-              transition-timing-function: ease;
-              background-color: #f2f2f2;
-              padding-top: 0
-            }
-          }
-
-          &.filter-container {
-            height: auto;
-            width: 100%;
-            float: none;
-            margin: 0 auto;
-            padding: 0 10px;
-            clear: both;
-          }
-
-          & .nav-title {
-            width: 100%;
-          }
-
-          & .filter-card {
-            width: 95%;
-          }
-        }
-
-        .people-list-container {
-          float: none;
-          width: 95%;
-          margin: 0 auto;
-          padding: 0 10px;
-
-          & .select-style {
-            margin: 9px 0;
-
-            & .selectall {
-              width: 74%;
-              padding-bottom: 6px;
-
-              & action-button {
-                margin-bottom: 5px;
-              }
-            }
-          }
-        }
-      }
-    }
+  .filter-container {
+    position: absolute;
+    padding: 10px;
+    z-index: 1;
+    top: 133px;
+    height: 645px;
+    width: calc(100% - 20px);
+    background-color: map-get($md-cfaccent, 100);;
+    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.3);
   }
-}
-
-
-
-@media only screen and (min-width:$min-mobile-breakpoint) and (max-width:$max-mobile-breakpoint) {
-  :host {
-    .career-main {
-      .comman_search_filter {
-        display: block;
-        width: 100%;
-        text-align: left;
-        margin: 0 auto 12px;
-        background-color: $white;
-
-        .people-search-header {
-          display: inline-block;
-          border: none;
-          width: 76%;
-          margin-bottom: 0;
-          position: relative;
-
-          mat-form-field {
-            width: 100%;
-
-            mat-icon {
-              cursor: pointer;
-            }
-          }
-        }
-
-        .filter-data {
-          float: left;
-          background-color: $white;
-          margin-top: 20px;
-          margin-left: 14px;
-
-          & .filter_icon {
-            display: block;
-          }
-
-
-        }
-      }
-
-      .people-main-container {
-        width: 100%;
-        padding-bottom: 100px;
-
-        & .container__header {
-          &.tablet {
-            position: absolute;
-            width: 100%;
-            top: -1000%;
-            left: 0;
-            border-bottom: none;
-            @include flex(column, center, center);
-            background-color: $white;
-            padding-top: $profile-form-field-mt;
-            padding-bottom: $profile-form-field-mt;
-            box-sizing: border-box;
-            transition: top 0.5s;
-            transition-timing-function: ease;
-            z-index: 1;
-
-            &.open {
-              top: 140px;
-              transition: top 0.5s;
-              transition-timing-function: ease;
-              background-color: #f2f2f2;
-              padding-top: 0
-            }
-          }
-
-          &.filter-container {
-            height: auto;
-            width: 100%;
-            float: none;
-            margin: 0 auto;
-            padding: 0 10px;
-            clear: both;
-          }
-
-          & .nav-title {
-            width: 100%;
-          }
-
-          & .filter-card {
-            width: 90%;
-          }
-        }
-
-        .people-list-container {
-          float: none;
-          width: 92%;
-          margin: auto;
-          padding: 0 10px;
-
-          & .row {
-            padding: 25px 10px;
-          }
-        }
-
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  :host {
-    .career-main {
-      .people-main-container {
-        .people-list-container {
-          & .row {
-            .header-container {
-              @include flex(column, center, flex-start);
-              margin-bottom: 10px;
-            }
-            .sub-container,
-            .skills-container {
-              margin-bottom: 10px;
-            }
-          }
-        }
-      }
-    }
-
-    .user-info {  
-      .info {
-        h2.name {
-          font-size: 20px;
-          line-height: 28px;
-        }
-  
-        h3.title {
-          font-size: 14px;
-          line-height: 18px;
-        }
-  
-        h4.secondary-title {
-          font-size: 12px;
-          line-height: 15px;
-        }
-  
-        h5.secondary-title {
-          font-size: 12px;
-          line-height: 15px;
-        }
-      }
-    }
-  }
-  
 }
