Pagination Styles, too

--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -271,6 +271,50 @@ $profile-form-field-mt: 30px;
   }
 }
 
+.pagination {
+  float: right;
+
+  ul {
+    padding: 3px 10px;
+    border-radius: 50px;
+    background-color: map-get($md-cfgray, 500);
+    @include inline-block-btn;
+
+    li {
+      @include inline-block-btn;
+      height: 15px;
+      width: 15px;
+      font-size: 14px;
+      text-align: center;
+      border-radius: 100%;
+      padding: 8px;
+      overflow: hidden;
+      vertical-align: middle;
+      color: $header-color;
+      cursor: pointer;
+      font-family: "Poppins", sans-serif;
+      font-weight: 500;
+      line-height: 21px;
+
+      &.active {
+        background-color: $white;
+      }
+
+      &.large_pagination_button {
+        height: auto;
+        width: auto;
+        margin-top: 4px;
+      }
+
+      & span {
+        vertical-align: middle;
+        @include inline-block-btn;
+      }
+
+    }
+  }
+}
+
 @media only screen and (max-width: $max-tablet-breakpoint) {
   :host {
     display: grid;
@@ -304,4 +348,16 @@ $profile-form-field-mt: 30px;
     background-color: map-get($md-cfaccent, 100);;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.3);
   }
+
+  .people-list-container {
+    padding: 5px;
+    .row {
+      .header-container {
+        action-button {
+          margin: auto;
+        }
+      }
+    }
+  }
+  
 }
