--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -9,6 +9,8 @@ $profile-form-field-mt: 30px;
     / 315px  1fr
   ;
   padding: 0;
+  background-color: $bg-color-1;
+  min-height: 100vh;
 }
 
 a {
@@ -73,8 +75,6 @@ a {
   position: sticky;
   padding: 20px;
   top: 80px;
-  overflow-y: scroll;
-  height: calc(100vh - 80px);
   height: 600px;
   padding-bottom: 120px;
 
