--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
@@ -131,8 +131,8 @@
 
         <div class="form-field">
           <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Title</mat-label>
-            <input matInput placeholder="Title" type="text" formControlName="title">
+            <mat-label>Job Title</mat-label>
+            <input matInput placeholder="Job Title" type="text" formControlName="title">
           </mat-form-field>
         </div>
 
