--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -132,8 +132,8 @@
       </div>
       <div class="profile-form__field">
         <mat-form-field class="bg-transparent" appearance="fill">
-          <mat-label>Title</mat-label>
-          <input matInput placeholder="Title" type="text" formControlName="basicInfoTitle">
+          <mat-label>Job Title</mat-label>
+          <input matInput placeholder="Job Title" type="text" formControlName="basicInfoTitle">
         </mat-form-field>
       </div>
       <div class="profile-form__field">
