--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.scss
@@ -5,10 +5,9 @@
   background-color: white;
 
   .back-row {
-    // width: 100%;
     height: 60px;
     padding-left: 40px;
-    display: flex;
+    display: none;
     align-items: center;
     border-bottom: 1px solid map-get($md-cfaccent, 50);
   }
@@ -233,6 +232,9 @@ small {
 @media only screen and (max-width: 991px) {
   :host {
     margin-top: 60px;
+    .back-row {
+      display: flex;
+    }
   }
   .user-row {
     padding: 20px 20px;
@@ -269,6 +271,8 @@ small {
 }
 
 @media only screen and (max-width: 480px) {
+
+
   .user-row {
     .user-detail {
       .user-info {
