--- a/client/src/app/pages/profile/user-profile/profile-section/profile-dialog.component.scss
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-dialog.component.scss
@@ -1,5 +1,21 @@
 @import './../../../../../styles/variables.scss';
 
+mat-dialog-content{
+  ul {
+    li {
+      .simpletag {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: flex-start;
+        padding: 5px 0;
+        border-radius: 18px;
+        width: 20%;
+        display: inline-block;
+      }
+    }
+  }
+}
 .form-field {
   margin-top: 30px;
   box-sizing: border-box;
@@ -45,6 +61,27 @@
     }
     input.hide {
       display: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  :host {
+    mat-dialog-content{
+      ul {
+        li {
+          .simpletag {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: flex-start;
+            padding: 5px 0;
+            border-radius: 18px;
+            width: 40%;
+            display: inline-block;
+          }
+        }
+      }
     }
   }
 }
