--- a/client/src/app/components/add-skill-popup/skill-level-description.component.html
+++ b/client/src/app/components/add-skill-popup/skill-level-description.component.html
@@ -2,6 +2,8 @@
 <h3 class="title">Skill Level Description</h3>
 <mat-dialog-content>
     <ul type="none" class="skill_level_desc">
-      <li *ngFor="let item of skillLevelDescription | keyvalue">{{item.key}} - {{item.value}}</li>
+      <li *ngFor="let item of skillLevelDescription | keyvalue"><simple-tag class="simpletag" type="gray" ellipseTag="true" value="{{item.key}}">
+        </simple-tag> - {{item.value}}<hr></li>
+      <!-- <li *ngFor="let item of skillLevelDescription | keyvalue">{{item.key}} - {{item.value}}</li> -->
     </ul>
    </mat-dialog-content>
