--- a/client/src/app/pages/profile/user-profile/profile-section/profile-dialog.component.html
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-dialog.component.html
@@ -17,10 +17,11 @@
 <ng-container *ngIf="data.category === 'Skill Level Description'" >
   <mat-dialog-content>
    <ul type="none" class="skill_level_desc">
-     <li *ngFor="let item of skillLevelDescription | keyvalue">{{item.key}} - {{item.value}}</li>
+     <li *ngFor="let item of skillLevelDescription | keyvalue"><simple-tag class="simpletag" type="gray" ellipseTag="true" value="{{item.key}}">
+      </simple-tag> - {{item.value}} <hr></li>
    </ul>
   </mat-dialog-content>
- 
+
 </ng-container>
 
 
