--- a/client/src/app/pages/profile/create-profile/skill-level-description-dialog.component.scss
+++ b/client/src/app/pages/profile/create-profile/skill-level-description-dialog.component.scss
@@ -1,44 +1,48 @@
-@import './../../../../styles/variables.scss';
+@import "./../../../../styles/variables.scss";
 
 :host {
-    .cancel{
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        color: #318bd6;
-    }
+  .cancel {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #318bd6;
+  }
 
-    .title {
-        color: rgba(map-get($md-cfaccent, 500), 0.84);
-        margin: 0px 0 20px;
-        display: block;
-        font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
-        text-align: center;
-    }
-    & mat-dialog-content {
-        width: 75%;
-        margin: 0 auto;
-        max-width: 615px;
-        min-width: 280px;
-        box-sizing: border-box;
-        max-height: auto;
-        ul {
-          li {
-            .simpletag {
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              align-content: flex-start;
-              padding: 5px 0;
-              border-radius: 18px;
-              width: 20%;
-              display: inline-block;
-            }
+  .title {
+    color: rgba(map-get($md-cfaccent, 500), 0.84);
+    margin: 0px 0 20px;
+    display: block;
+    font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+    text-align: center;
+  }
+  & mat-dialog-content {
+    width: 75%;
+    margin: 0 auto;
+    max-width: 615px;
+    min-width: 280px;
+    box-sizing: border-box;
+    max-height: auto;
+    ul {
+      .key {
+        .simpletag {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-content: flex-start;
+          padding: 5px 0;
+          border-radius: 18px;
+          width: 20%;
+          display: inline-block;
+        }
+        & li {
+          b.bold {
+            font-weight: 590;
           }
         }
+      }
     }
+  }
 }
-
 
 @media only screen and (max-width: 480px) {
   :host {
@@ -48,7 +52,7 @@
       display: block;
       font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
       text-align: center;
-  }
+    }
     mat-dialog-content {
       padding: 0;
       width: 75%;
@@ -60,7 +64,7 @@
       padding-right: 0px;
       ul.skill_level_desc {
         padding: 0;
-        li {
+        .key {
           .simpletag {
             flex-direction: column;
             justify-content: center;
@@ -72,10 +76,6 @@
           }
         }
       }
+    }
   }
-   }
 }
-
-
-
-
