Chrome autofill off?

--- a/client/src/app/pages/people/people-search/people-search.component.html
+++ b/client/src/app/pages/people/people-search/people-search.component.html
@@ -6,7 +6,7 @@
 </ng-container>
 
 <!-- Search Bar -->
-<div class="common_search_filter" [formGroup]="peopleForm">
+<form class="common_search_filter" [formGroup]="peopleForm" autocomplete="off"> 
   <div class="filter-data">
     <mat-icon (click)="toggleTabMenuOpen()" class="filter_icon">filter_list</mat-icon>
   </div>
@@ -34,7 +34,7 @@
       </mat-autocomplete>
     </mat-form-field>
   </div>
-</div>
+</form>
 
 <!-- Filter Side -->
 <div class="filter-container container__header tablet" [formGroup]="peopleForm" *ngIf="showFilterListFlag" [@enterAnimation]>
