--- a/client/src/app/pages/company/create-company/create-company.component.scss
+++ b/client/src/app/pages/company/create-company/create-company.component.scss
@@ -1030,14 +1030,15 @@ p {
       margin-top: $container-mt-tablet;
       action-button.btn-next {
         position: unset;
-        margin-top: 30px;
+        margin-top: 25px;
+        margin-bottom: 35px;
       }
       .container__full {
         .profile-form {
           width: 85%;
           max-width: $profile-form-max-width-tablet;
           padding: $profile-form-padding-tablet;
-          margin-bottom: 50px;
+          margin-bottom: 0;
           &__image {
             width: 30%;
             max-width: 110px;
@@ -1069,6 +1070,7 @@ p {
       / 0 auto
       ;
       grid-column-gap: 0;
+      padding-top: 60px;
 
       legend {
         position: fixed;
